fixing spacing for mobile

--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -88,11 +88,19 @@ header.masthead .masthead-content .masthead-subheading {
   }
 }
 
+h2.heading{
+  margin: 10px;
+}
+h3.subheading{
+  margin-left: 30px;
+}
+
 img.painting {
   display: block;
   height: auto;
   width: auto;
   max-height: 80vh;
+  max-width: 90vw;
   margin-right: auto;
   margin-left: auto;
   margin-top: 20px;
